--- a/app/src/main/res/layout/fragment_tentang.xml
+++ b/app/src/main/res/layout/fragment_tentang.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Riding adalah aktivitas yang menyenangkan, namun tetap memiliki tanggung jawab. Aplikasi ini membantu anda menjadi riders yang benar, baik dan juga tentunya aman."
+            android:text="SevenSummitIndonesia adalah aplikasi informasi mengenai 7 Gunung tertinggi di Indonesia, disajikan juga persiapan menanjak untuk pribadi dan kelompok."
             android:layout_weight="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
